# noir_java

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/java/noir/: App.java  Noir.java  Proof.java
app/src/main/noir_java/: Cargo.toml  Nargo.toml
app/src/main/resources/: noir_java.json
app/src/main/rustlib/: Cargo.toml
app/src/main/rustlib/src/: lib.rs
app/src/test/java/noir/: AppTest.java
